# whereami

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix  shell.nix
src/: compositor.rs  config_management.rs  hyprctl.rs  main.rs  models.rs  search.rs  ui.rs
src/ui/: mod.rs  subscribe.rs  update.rs  view.rs
