[package]
name = "whereami"
version = "0.1.0"
edition = "2024"

[dependencies]
fd-lock = "4.0.4"
fuzzy-matcher = "0.3.7"
iced = { version = "0.13.1", features = ["tokio", "debug"] }
iced_core = "0.13.2"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
