[package]
name = "whereami"
version = "0.1.0"
edition = "2024"
authors = ["Respire"]
description = "Window Switcher for Hyprland"
license = "MIT"
repository = "https://github.com/okrespire/whereami"

[dependencies]
fd-lock = "4.0.4"
fuzzy-matcher = "0.3.7"
iced = { version = "0.13.1", features = ["debug", "tokio"] }
iced_core = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.8"
